# sg-ai-ctf-25

./: README.md  pyproject.toml
Bring Your Own Guardrails/: README.md
Co-Pirate/: README.md
Fool the FashionNet!/: challenge_website.html
Fool the FashionNet!/challenge_package_build/: delta.npy
Kopitalk/: README.md
Limit Theory/: README.md
Real or Fake/: README.md  index.html  solve.py
StrideSafe/: README.md  labeled_hashes.txt  solve.py
Well Well Well/: README.md
final/Drone Dance of Doom/: README.md  get_all_paths.py  solve.py
final/Five Words to Chaos/: README.md  dataset.csv  log.txt  solve.py
final/Jigsaw/: README.md  log.txt  match_scores.txt  solve.py
final/LionRoar2/: README.md
final/Makan Agent/: README.md
final/Spiral/: README.md  display_np.py
quals/Bring Your Own Guardrails/: README.md
quals/Fool the FashionNet!/: README.md
quals/Fool the FashionNet!/challenge_package_build/: solve.py  solve_foolbox.py
quals/Limit Theory/: README.md  limit.py  results.csv
quals/LionRoar/: README.md
quals/MLMpire/: README.md  solve.ipynb
quals/MNIST/: README.md
quals/The Best Hedgehog/: README.md  hedgehog.py
quals/Well Well Well/: README.md  solve.py
